# research

2022/: CMakeLists.txt
2022/haz_ptrs/: CMakeLists.txt
2022/haz_ptrs/benchmark/: CMakeLists.txt  benchmark.cpp
2022/haz_ptrs/demo/: CMakeLists.txt  main.cpp
2022/haz_ptrs/haz_ptrs/: CMakeLists.txt  haz_ptr.cpp  haz_ptr.hpp
2022/lockfree_map/: CMakeLists.txt
2022/lockfree_map/benchmark/: CMakeLists.txt
2022/lockfree_map/demo/: CMakeLists.txt  demo.cpp
2022/lockfree_map/lockfree_map/: CMakeLists.txt  lockfree_map.cpp  lockfree_map.hpp
2022/octree-render/: index.html  main.mjs  ray.mjs  tree.mjs
2022/octree-render/rustree/src/: main.rs
2022/spatial-search/: hash.js  index.html  main.js  qtree.js
2022/wave-function-collapse/: index.html  main.js
2023/lowcode-whatsthat/: README.md  index.js
2023/lowcode-whatsthat/ui/: package-lock.json  package.json
2023/lowcode-whatsthat/ui/src/components/: Spec.tsx  SystemSpec.tsx
2023/lowcode-whatsthat/ui/src/pages/: index.astro
2023/rust-voxelrender/: Cargo.toml  README.md
2023/rust-voxelrender/src/: main.rs
2023/wgpu-voxel/: Cargo.toml
2023/wgpu-voxel-2/: Cargo.toml
2023/wgpu-voxel-2/src/: main.rs  shader.wgsl
2023/wgpu-voxel-2/src/voxelengine/: buffers.rs  mod.rs  world.rs
2023/wgpu-voxel/src/: shader.wgsl
2023/wgpu-voxel/src/voxelengine/: buffers.rs  mod.rs  world.rs
2024/voxel-opengl/: BVH.cs  BufferObject.cs  ComputeShader.cs  FrameData.cs  ImageBuffer.cs  LinearBuffer.cs  Program.cs  SSBO.cs  Shader.cs  ShaderTemplate.cs  VertexArrayObject.cs  Voxel.cs  depth.comp  framedata.glsl  quaternions.glsl  shader.frag  shader.vert  utils.glsl  voxel-opengl.csproj  voxel-opengl.sln  voxels.glsl
